<?xml version="1.0" encoding="utf-8"?>
<resources>


	<string name="search_label">xxxs</string>
	<string name="settings_description">Definitions of words</string>
	<string name="search_invoke">sss</string>
	<string name="search_query_results">ssdsadws</string>
	
    <string name="app_name">雅驰售卡网点分布图</string>

    <string name="msg_exit">确定退出雅驰售卡网点分布图?</string>
    <string name="msg_ok">确定</string>
    <string name="msg_cancel">取消</string>
    
    <string name="tab_about">关于</string>
    <string name="tab_layer">图层</string>
    <string name="tab_filter">过滤</string>
    
    <string name="geo_all">所有网点</string>
    <string name="geo_a">A类网点</string>
    <string name="geo_b">B类网点</string>
    <string name="geo_c">C类网点</string>
    <string name="geo_d">D类网点</string>
    
    <string name="search_label">搜销售点</string>
    <string name="search_hint">请输入关键字</string>
    <string name="settings_description">设置</string>
    <string name="search_invoke">语音搜索</string>
    
    
    <string name="frame_type_plain">平面图</string>
    <string name="frame_type_satellite">卫星图</string>
    
    
    
    <string name="tip_update_date_first">请稍等，正在进行首次数据获取...</string>
    <string name="tip_update_net_error">网络未连接，将不能更新网点信息!</string>
    <string name="tip_net_error">您的网络出错啦！</string>
    <string name="tip_data_error">输入正确的检索条件！</string>
    <string name="tip_key_error">请输入正确的授权Key！</string>



</resources>
