<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <com.baidu.mapapi.map.MapView
        android:id="@+id/bmapsView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:clickable="true" />

    <RelativeLayout
        android:id="@+id/main_top_lay"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/map_layer_background"
        android:layout_margin="5dip" >

        <ImageView
            android:id="@+id/main_focus_iv"
            android:layout_width="40dip"
            android:layout_height="40dip"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_location"
            android:contentDescription="定位" />

        <EditText
            android:id="@+id/main_search_iv"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:hint="@string/search_hint" />

        <ImageView
            android:id="@+id/main_frame_iv"
            android:layout_width="24dip"
            android:layout_height="24dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/main_map_layer"
            android:contentDescription="视图" />
    </RelativeLayout>

    <HorizontalScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="2dp"
        android:background="@drawable/map_layer_background" >

        <RadioGroup
            android:id="@+id/bottom_geo_rg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/bottom_geo_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/geo_all" />

            <RadioButton
                android:id="@+id/bottom_geo_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/geo_a" />

            <RadioButton
                android:id="@+id/bottom_geo_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/geo_b" />

            <RadioButton
                android:id="@+id/bottom_geo_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/geo_c" />

            <RadioButton
                android:id="@+id/bottom_geo_d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/geo_d" />
        </RadioGroup>
    </HorizontalScrollView>

</RelativeLayout>